; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/ddraw/extr_viewport.c_d3d_viewport_init.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/ddraw/extr_viewport.c_d3d_viewport_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d3d_viewport = type { i32, i32, i32, %struct.ddraw*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }
%struct.ddraw = type { i32 }

@d3d_viewport_vtbl = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @d3d_viewport_init(%struct.d3d_viewport* %0, %struct.ddraw* %1) #0 {
  %3 = alloca %struct.d3d_viewport*, align 8
  %4 = alloca %struct.ddraw*, align 8
  store %struct.d3d_viewport* %0, %struct.d3d_viewport** %3, align 8
  store %struct.ddraw* %1, %struct.ddraw** %4, align 8
  %5 = load %struct.d3d_viewport*, %struct.d3d_viewport** %3, align 8
  %6 = getelementptr inbounds %struct.d3d_viewport, %struct.d3d_viewport* %5, i32 0, i32 4
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  store i32* @d3d_viewport_vtbl, i32** %7, align 8
  %8 = load %struct.d3d_viewport*, %struct.d3d_viewport** %3, align 8
  %9 = getelementptr inbounds %struct.d3d_viewport, %struct.d3d_viewport* %8, i32 0, i32 0
  store i32 1, i32* %9, align 8
  %10 = load %struct.ddraw*, %struct.ddraw** %4, align 8
  %11 = load %struct.d3d_viewport*, %struct.d3d_viewport** %3, align 8
  %12 = getelementptr inbounds %struct.d3d_viewport, %struct.d3d_viewport* %11, i32 0, i32 3
  store %struct.ddraw* %10, %struct.ddraw** %12, align 8
  %13 = load %struct.d3d_viewport*, %struct.d3d_viewport** %3, align 8
  %14 = getelementptr inbounds %struct.d3d_viewport, %struct.d3d_viewport* %13, i32 0, i32 1
  store i32 255, i32* %14, align 4
  %15 = load %struct.d3d_viewport*, %struct.d3d_viewport** %3, align 8
  %16 = getelementptr inbounds %struct.d3d_viewport, %struct.d3d_viewport* %15, i32 0, i32 2
  %17 = call i32 @list_init(i32* %16)
  ret void
}

declare dso_local i32 @list_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
